apps/sm-flexews/base/ews-bg-other.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ews-bg-other
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ews-bg-other
  template:
    metadata:
      labels:
        app: ews-bg-other
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: api
        image: nginxinc/nginx-unprivileged:alpine
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "1000m"
            memory: "1000Mi"
          limits:
            cpu: "1000m"
            memory: "2000Mi"
        ports:
          - name: health-check
            containerPort: 5000
            hostPort: 5000
        readinessProbe:
          tcpSocket:
            port: health-check
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: health-check
          initialDelaySeconds: 15
          periodSeconds: 20   
apiVersion: v1
kind: ConfigMap
metadata:
  name: ews-bg-other-configmap
data:
  LOG_LEVEL: "info"
