apps/sm-flexews/base/ews-web-be-admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ews-web-be-admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ews-web-be-admin
  template:
    metadata:
      labels:
        app: ews-web-be-admin
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: api
        image: nginxinc/nginx-unprivileged:alpine
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "500m"
            memory: "1000Mi"
          limits:
            cpu: "1000m"
            memory: "2000Mi"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/global
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3 
---
apiVersion: v1
kind: Service
metadata:
  name: ews-web-be-admin
spec:
  type: ClusterIP
  selector:
    app: ews-web-be-admin
  ports:
  - port: 80
    targetPort: 8080
