apps/sm-flexews/base/ews-web-be-warning.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ews-web-be-warning
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ews-web-be-warning
  template:
    metadata:
      labels:
        app: ews-web-be-warning
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: api
        image: nginxinc/nginx-unprivileged:alpine
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ews-web-be-warning
spec:
  type: ClusterIP
  selector:
    app: ews-web-be-warning
  ports:
  - port: 80
    targetPort: 8080
