apps/sm-flexews/base/ews-web-fe.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ews-web-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ews-web-fe
  template:
    metadata:
      labels:
        app: ews-web-fe
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: api
        image: nginxinc/nginx-unprivileged:alpine
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "500m"
            memory: "1000Mi"
          limits:
            cpu: "1000m"
            memory: "2000Mi"
        volumeMounts:
        - name: web-config-volume
          mountPath: /usr/share/nginx/html/configuration/appsettings.js
          subPath: appsettings.js
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3        
      volumes:
      - name: web-config-volume
        configMap:
          name: ews-web-fe-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: ews-web-fe
spec:
  type: ClusterIP
  selector:
    app: ews-web-fe
  ports:
  - port: 80
    targetPort: 8080
