apps/sm-flexews/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    service: user
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    service: product
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    service: order
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    service: redis
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
