apps/sm-flexews/base/network-policies.yaml
---
# NetworkPolicies for sm-flexews namespace

# Deny all by default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# Allow DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
# Allow ingress from Kong only
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-kong-only
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: NotIn
      values: ["ews-bg-auto", "ews-bg-etl", "ews-bg-other"]
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kong
# ---
# # Allow egress to Redis
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-egress-to-redis
# spec:
#   podSelector:
#     matchExpressions:
#     - key: app
#       operator: NotIn
#       values: ["redis"]
#   policyTypes:
#   - Egress
#   egress:
#   - to:
#     - podSelector:
#         matchLabels:
#           app: redis
#     ports:
#     - protocol: TCP
#       port: 6379
# ---
# # Allow ingress to Redis
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-ingress-to-redis
# spec:
#   podSelector:
#     matchLabels:
#       app: redis
#   policyTypes:
#   - Ingress
#   ingress:
#   - from:
#     - podSelector: {}
#     ports:
#     - protocol: TCP
#       port: 6379
